# olympics-eagle

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pushover_api_keys.json  pyproject.toml  user_agents.py
src/: main.py  notifications.py  scraping.py  user_agents.py  utils.py
