[tool.poetry]
name = "olympics-eagle"
version = "0.1.0"
description = "Give me tickets to see climbing at the olympics please"
authors = ["ruth-wj <ruth.whelanjeans@netacea.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
selenium = "^4.23.1"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
